<resources>
    <string name="app_name">Personas</string>
    <string name="title_crear_personas">CREAR PERSONA</string>
    <string name="cedula">Cédula</string>
    <string name="nombres">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="titulo_listar_persona">LISTAR PERSONAS</string>
    <string name="fila_num">#</string>
    <string name="listar">Listar</string>
    <string name="crear">Crear</string>
    <string name="mensaje_error_id">Digite una cedula</string>
    <string name="mensaje_error_name">Digite un nombre</string>
    <string name="mensaje_error_lastname">Digite un apellido</string>
    <string name="mensaje_guardado_exitosamente">Persona guardada exitosamente</string>
    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </string-array>
</resources>