<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarPersonas">

    <TextView
        android:id="@+id/lblTituloListar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_listar_persona"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblPersonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblRowNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fila_num"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblIdentification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cedula"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>